--- a/index.html
+++ b/index.html
@@ -1,203 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAIN VIEWR - Jaswanth Madiya</title>
-    <style>
-        body {
-            display: flex;
-            font-family: Arial, sans-serif;
-            margin-top: 12%;
-            align-items: center;
-            text-align: center;
-            background-color: rgb(33, 23, 37);
-            color: #fff;
-        }
+    <!-- Add your meta tags, styles, and scripts here -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#f1f1f1" />
+    <link rel="icon" type="image/x-icon" href="Images/favicon.png" />
 
-        #question-container {
-            margin: 0 auto;
-            max-width: 800px;
-            width: 100%;
-        }
+    <meta property="og:title" content="Souls of Humanity">
+    <meta property="og:description" content="A Non Profitable Organization">
+    <meta property="og:image" content="https://i.ibb.co/hBbnZ2F/icon.png">
+    <meta property="og:url" content="souls-of-humanity.vercel.app">
+    <meta property="og:type" content="website">
 
-        .subject-name {
-            font-size: 32px;
-            background-color: bisque;
-            padding: 5px;
-            border-radius: 10px;
-            color: black;
-            text-align: center;
-            font-weight: bold;
-            margin-bottom: 20px;
-            width: 100%;
-        }
+    <title>Jaswanth Madiya</title>
 
-        #question {
-            background-color: aliceblue;
-            color: black;
-            padding: 40px;
-            border-radius: 40px;
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
+    <!-- Font Awesome  -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" /> -->
 
-        #answer {
-            background-color: green;
-            color: aliceblue;
-            padding: 30px;
-            border-radius: 50px;
-            font-size: 16px;
-            font-weight: bolder;
-            margin-bottom: 20px;
-        }
+    <!-- Swiper -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" /> -->
 
-        .navigation-buttons {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-        }
+    <!-- JQuery -->
+    <!-- <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> -->
 
-        .navigation-button {
-            flex: 1;
-            padding: 10px;
-            font-size: 16px;
-            cursor: pointer;
-            border: none;
-            border-radius: 5px;
-        }
+    <!-- Waypoints -->
+    <!-- <script defer src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script> -->
 
-        #previous-button {
-            background-color: #6c757d;
-            color: #fff;
-        }
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
 
-        #next-button {
-            background-color: #007BFF;
-            color: #fff;
-        }
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-        /* Media Queries */
-        @media (max-width: 600px) {
-            body{
-                margin-top: 50%;
-            }
-            #question-container {
-                padding: 10px;
-            }
-        }
-    </style>
-</head>
-<body>
+    <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
 
-    <div id="question-container">
-        <select class="subject-name" id="subject-dropdown" onchange="loadQuestionsBySubject()">
-            <!-- Options will be dynamically populated by JavaScript -->
-        </select>
-        <div id="question"></div>
-        <div id="answer"></div>
-        <div class="navigation-buttons">
-            <button id="previous-button" class="navigation-button" onclick="showPreviousQuestion()">Previous</button>
-            <button id="next-button" class="navigation-button" onclick="showNextQuestion()">Next</button>
-        </div>
-    </div>
-    <footer style="background-color: #333; color: #fff; padding: 10px; position: fixed; bottom: 0; width: 100%;">
-        &copy; 2023 All Rights to Jaswanth Madiya
-    </footer>
+    <!-- External CSS -->
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+
+    <script src="https://cdn.lordicon.com/lordicon-1.2.0.js"></script>
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.1/cropper.min.js"
+        integrity="sha512-9KkIqdfN7ipEW6B6k+Aq20PV31bjODg4AA52W+tYtAE0jE0kMx49bjJ3FgvS56wzmyfMUHbQ4Km2b7l9+Y/+Eg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.1/cropper.css"
+        integrity="sha512-bs9fAcCAeaDfA4A+NiShWR886eClUcBtqhipoY5DM60Y1V3BbVQlabthUBal5bq8Z8nnxxiyb1wfGX2n76N1Mw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="login.css">
 
     <script>
-        // Load JSON data from the file
-        async function loadJSONData() {
-            const response = await fetch('questions.json');
-            const data = await response.json();
-            return data;
-        }
-
-        let subjectWiseData;
-        let currentSubjectIndex = 0;
-        let currentQuestionIndex = 0;
-
-        async function loadQuestionsBySubject() {
-            const subjectDropdown = document.getElementById("subject-dropdown");
-            const selectedSubject = subjectDropdown.value;
-
-            if (subjectWiseData && subjectWiseData[selectedSubject]) {
-                currentSubjectIndex = Object.keys(subjectWiseData).indexOf(selectedSubject);
-                currentQuestionIndex = 0;
-                showNextQuestion();
+        try {
+            const isLoggedIn = localStorage.getItem('loggedIn');
+            if (isLoggedIn) {
+                // Redirect to the working page if logged in
+                window.location.href = 'main.html';
             }
+        } catch (error) {
+            console.error('An error occurred while checking login status:', error);
         }
-
-        async function showPreviousQuestion() {
-            if (!subjectWiseData) {
-                subjectWiseData = await loadJSONData();
-            }
-
-            const currentSubject = Object.keys(subjectWiseData)[currentSubjectIndex];
-            const currentQuestions = subjectWiseData[currentSubject];
-
-            if (currentQuestionIndex > 0) {
-                // Show the previous question
-                currentQuestionIndex--;
-                const currentQuestion = currentQuestions[currentQuestionIndex];
-                document.getElementById("question").textContent = currentQuestion.question;
-                document.getElementById("answer").textContent = `Correct Answer: ${currentQuestion.correct_answer}`;
-            } else {
-                // If already at the first question, show a message or handle as needed
-                alert("This is the first question.");
-            }
-        }
-
-        async function showNextQuestion() {
-            if (!subjectWiseData) {
-                subjectWiseData = await loadJSONData();
-            }
-
-            const currentSubject = Object.keys(subjectWiseData)[currentSubjectIndex];
-            const currentQuestions = subjectWiseData[currentSubject];
-
-            if (currentQuestionIndex < currentQuestions.length - 1) {
-                // Show the next question
-                currentQuestionIndex++;
-                const currentQuestion = currentQuestions[currentQuestionIndex];
-                document.getElementById("question").textContent = currentQuestion.question;
-                document.getElementById("answer").textContent = `Correct Answer: ${currentQuestion.correct_answer}`;
-            } else {
-                // Move to the next subject
-                currentSubjectIndex++;
-                currentQuestionIndex = 0;
-
-                if (currentSubjectIndex < Object.keys(subjectWiseData).length) {
-                    // Show the first question of the next subject
-                    showNextQuestion();
-                } else {
-                    // No more subjects, display a message or handle as needed
-                    alert("End of questions.");
-                }
-            }
-        }
-
-        // Initial load
-        async function initialize() {
-            subjectWiseData = await loadJSONData();
-            const subjectDropdown = document.getElementById("subject-dropdown");
-
-            // Populate subject dropdown options
-            Object.keys(subjectWiseData).forEach((subject) => {
-                const option = document.createElement("option");
-                option.value = subject;
-                option.textContent = subject;
-                subjectDropdown.appendChild(option);
-            });
-
-            // Load questions for the initial subject
-            loadQuestionsBySubject();
-        }
-
-        initialize();
     </script>
 
+    <style>
+        footer {
+            position: fixed;
+            bottom: 0;
+            text-align: center;
+        }
+    </style>
+
+</head>
+
+<body>
+
+    <!-- Header End -->
+
+    <div class="wrapper">
+        <form >
+            <h1>Login</h1>
+            <div class="input-box">
+                <input type="text" id="loginUsername" placeholder="Username" required>
+                <i class='bx bxs-user'></i>
+            </div>
+            <div class="input-box">
+                <input type="password" id="loginPassword" placeholder="Password" required>
+                <i class='bx bxs-lock-alt'></i>
+            </div>
+            <button type="button" onclick="login()" class="btn">Login</button>
+        </form>
+    </div>
+
+    <footer style="color: #fff;">
+        <div>
+            <p style="font-size: x-small;">Developed by <a href="https://jaswanth-madiya.vercel.app/"
+                    target="_blank">Jaswanth Madiya</a></p>
+        </div>
+    </footer>
+
+    <!-- SwiperJS -->
+    <script>
+        // Perform login
+        function login() {
+            console.log("Click")
+            // Predefined username and password
+            const validUsername = 'gitam';
+            const validPassword = '$ecured';
+
+            // Get entered username and password
+            const enteredUsername = document.getElementById('loginUsername').value;
+            const enteredPassword = document.getElementById('loginPassword').value;
+
+            console.log(enteredUsername);
+            console.log(enteredPassword);
+
+            // Check if entered credentials match predefined values
+            if (enteredUsername == validUsername && enteredPassword == validPassword) {
+                console.log("Checked")
+                localStorage.setItem('loggedIn', 'true');
+                window.location.href = 'main.html';
+                // return true;
+            } else {
+                alert('Invalid username or password');
+                // return false;
+            }
+        }
+
+        setInterval(function () {
+            localStorage.clear();
+        }, 10 * 60 * 1000);
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
