--- a/main.html
+++ b/main.html
@@ -114,6 +114,7 @@
             <button id="previous-button" class="navigation-button" onclick="showPreviousQuestion()">Previous</button>
             <button id="next-button" class="navigation-button" onclick="showNextQuestion()">Next</button>
         </div>
+        <a href="/maths.html" style="color: #fff; position: fixed; margin: 10px;">Maths</a>
     </div>
     <footer style="background-color: #333; color: #fff; padding: 10px; position: fixed; bottom: 0; width: 100%;">
         &copy; 2023 All Rights to Jaswanth Madiya
